[new]sidebar-scroll spy[bug]解決collapse與get衝突(重複引入bootstrap)

--- a/css/style.css
+++ b/css/style.css
@@ -453,16 +453,45 @@ hr {
 }
 
 /* GO TOP / DOWN */
-.go{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+@media only screen and (max-width: 700px) {
+  
+.side-bar{
+    display: none;
+  }
+}
+
+.side-bar{
   position: fixed;
-  bottom: 10rem;
-  right: 2rem;
-  background-color: rgb(17, 16, 16,0.8);
-  color: white;
+  bottom: 15rem;
+  right: 3rem;
+  font-size: small;
+}
+.go{
+  width: 30px;
+  border-radius: 50%;
   text-align: center;
-  line-height: 50px;
-  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.5);
+  margin-bottom: 0.5rem;
+  position: relative;
+}
+.go a{
+  color: rgb(224, 224, 224);
+  transition: 1s;
+} 
+.go:active{
+  transform: scale(0.9);
+  box-shadow: 5px 5px 8px 1px rgba(0, 0, 0, 0.3);
+}
+
+/* BTN */
+@media only screen and (max-width: 700px) {
+#chgL{
+  text-align: center;
+  width: 2rem;
+  width: 100%;
+}
+
+#chgL a{
+  text-align: center;
+  font-size: smaller;
+}
 }
